CSS updates to prevent overflow on small screens

--- a/htm/stylesheet/core.css
+++ b/htm/stylesheet/core.css
@@ -47,6 +47,9 @@ downloaded. */
 
 img {
 	 border: none;
+	 width: auto;
+	 height: auto;
+	 max-width: 100%;
 }
 
 img.tall {
@@ -325,6 +328,9 @@ table {
    font-size: 90%;
    margin-left:auto;
    margin-right:auto;
+	 max-width: 100%;
+	 display: block;
+	 overflow-x: scroll;
 }
 
 td {
